I made some changes to map. I have put speakers in all the blue positions that Andy designated. I have also changed the speaker color from random to a polarizing red that shows up well on the map. PROBLEMS: I am having a problem with the speakers, specifically when they are clicked it seems that sometimes they take an ID that isn't theirs and so they update the wrong values. I am also having a problem with the scaling because the map does not scale well when changing the scaling of the max height/width for some reason. Also, drag the dev console up when the map is open. We need to make the speaker icons redraw when the map does, otherwise the icons dont move, but the map does.

--- a/software/src/omaha/templates/components/map-controller.html
+++ b/software/src/omaha/templates/components/map-controller.html
@@ -14,7 +14,7 @@
 
 <dom-module id="map-controller">
   <template>
-    <style>
+    <style> 
       :host {
         display: block;
       }
@@ -39,8 +39,13 @@
       }
 
       #map {
+
+        /*
+            There is a problem with this I think because when you use a bigger or smaller scaling then the speakers are misaligned.
+        */
+
         display: block;
-        width: auto;
+        width: 100%;
         height: auto;
         max-height: 100%;
       }
@@ -51,6 +56,7 @@
     </style>
     <div class="container-height layout horizontal center">
       <div class="fit container layout vertical center">
+       <!--<div id="cont" on-click="test" style="position: relative;">-->
        <div id="cont" style="position: relative;">
          <img id="map" src="/css/map.png">
          <template is="dom-repeat" items="{{locations}}">
@@ -109,6 +115,10 @@
 
 
         Polymer.dom(this.$.cont).appendChild(div);
+
+        /*this.locations[2].x = 400;
+        this.locations[2].y = 400;
+        this.locations[2].id = 109;*/
       },
 
       _iconClicked: function(event) {
@@ -142,17 +152,63 @@
             } else {
               this.locations = [
                 {
-                  x: Math.round(300 * (this.$.map.width/this.$.map.naturalWidth)),
-                  y: Math.round(200 * (this.$.map.height/this.$.map.naturalHeight)),
+                  x: Math.round(570 * (this.$.map.width/this.$.map.naturalWidth)),  // #1
+                  y: Math.round(235 * (this.$.map.height/this.$.map.naturalHeight)),
                   id: 107
+                },                
+                {
+                  x: Math.round(570 * (this.$.map.width/this.$.map.naturalWidth)),  // #2
+                  y: Math.round(360 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 108
                 },
                 {
-                  x: Math.round(150 * (this.$.map.width/this.$.map.naturalWidth)),
-                  y: Math.round(100 * (this.$.map.height/this.$.map.naturalHeight)),
-                  id: 108
+                  x: Math.round(570 * (this.$.map.width/this.$.map.naturalWidth)),  // #3
+                  y: Math.round(495 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 109
+                },
+                {
+                  x: Math.round(420 * (this.$.map.width/this.$.map.naturalWidth)),  // #4
+                  y: Math.round(495 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 110
+                },
+                {
+                  x: Math.round(420 * (this.$.map.width/this.$.map.naturalWidth)),  // #5
+                  y: Math.round(365 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 111
+                },
+                {
+                  x: Math.round(420 * (this.$.map.width/this.$.map.naturalWidth)),  // #6
+                  y: Math.round(235 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 112
+                },
+                {
+                  x: Math.round(270 * (this.$.map.width/this.$.map.naturalWidth)),  // #7
+                  y: Math.round(235 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 113
+                },
+                {
+                  x: Math.round(90 * (this.$.map.width/this.$.map.naturalWidth)),  // #8
+                  y: Math.round(232 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 114
+                },
+                {
+                  x: Math.round(88 * (this.$.map.width/this.$.map.naturalWidth)),  // #9
+                  y: Math.round(365 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 115
+                },
+                {
+                  x: Math.round(270 * (this.$.map.width/this.$.map.naturalWidth)),  // #10
+                  y: Math.round(365 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 116
+                },
+                {
+                  x: Math.round(270 * (this.$.map.width/this.$.map.naturalWidth)),  // #11
+                  y: Math.round(500 * (this.$.map.height/this.$.map.naturalHeight)),
+                  id: 117
                 }];
-
             }
+
+            console.log(this.locations[0].id, this.locations[0].x, this.locations[0].y);
           });
       }
     });
