--- a/software/src/omaha/templates/components/speaker-icon.html
+++ b/software/src/omaha/templates/components/speaker-icon.html
@@ -21,7 +21,7 @@
 
       .block {
         width: 30px;
-        height: 30px;
+        height: 30px; 
         position: absolute;
         cursor: pointer;
 
@@ -33,11 +33,11 @@
   </template>
   <script>
     var colors = [
-      '--paper-brown-500',
+      /*'--paper-brown-500',
       '--paper-deep-orange-500',
       '--paper-orange-500',
-      '--paper-amber-500',
-      '--paper-yellow-500',
+      '--paper-amber-500',*/
+      /*'--paper-yellow-500',
       '--paper-lime-500',
       '--paper-light-green-500',
       '--paper-green-500',
@@ -48,7 +48,7 @@
       '--paper-indigo-500',
       '--paper-deep-purple-500',
       '--paper-purple-500',
-      '--paper-pink-500',
+      '--paper-pink-500',*/
       '--paper-red-500'
     ];
 
