Added some debug statements to figure out which speakers are gettign what for teir IDs and coordinates. I also added the printout statement to iconClicked. They seem to be getting the right ID but they are either not setting the variables correctly, or I think MAYBE they are not pullign the right varaibles on the UI. Idk if that even makes sense.

--- a/software/src/omaha/templates/components/map-controller.html
+++ b/software/src/omaha/templates/components/map-controller.html
@@ -126,6 +126,8 @@
         this.sharedElements = {
           'hero': event.target
         };
+
+        console.log(evnt.localTarget.speakerId);
         /*
           event names must be lowercase
         */
@@ -208,9 +210,12 @@
                 }];
             }
 
-            console.log(this.locations[0].id, this.locations[0].x, this.locations[0].y);
+            // This id for debugging to make sure the speakers are getting the correct IDs and coordinates.
+            for(i = 0; i < this.locations.length; i++) {
+              console.log("Speaker " + i + ": \n\tID:", this.locations[i].id, "\n\tX: ", this.locations[i].x, "\n\tY: ", this.locations[i].y);
+            }
           });
       }
     });
   </script>
-</dom-module>
+</dom-module> 
