--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -3,7 +3,11 @@
 <link rel="import" href="/bower_components/iron-form/iron-form.html">
 <link rel="import" href="/bower_components/paper-input/paper-input.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
-
+<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="/bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 
 <dom-module id="login-form">
   <template>
@@ -19,6 +23,7 @@
         color: #3367d6;
         font-size: 20px;
         font-weight: 500;
+        margin-bottom: 5px;
       }
       
       paper-button {
@@ -27,19 +32,56 @@
         margin-top: 50px;
         width: 100%;
       }
+
+      .message {
+        color: var(--paper-red-500);
+      }
     </style>
-    <div class="horizontal layout center form-title">
-      <div class="flex company">Project Omaha</div>
-    </div>
-    <form is="iron-form" id="form"  method="post" action="/checkout">
-      <paper-input name="username" label="Username" required></paper-input>
-      <paper-input name="password" label="Password" type="password" required></paper-input>
-      <a href="/app/"><paper-button raised on-click="_submit">Login</paper-button></a>
+    <div class="flex company">Project Omaha</div>
+    <template is="dom-if" if="{{redirect}}">
+      <div class="message">Please login before proceeding</div>
+    </template>
+    <div class="message">{{err}}</div>
+    <form is="iron-form" id="form"  method="post">
+      <paper-input id="username" name="username" label="Username" required></paper-input>
+      <paper-input id="password" name="password" label="Password" type="password" required></paper-input>
+      <paper-button raised on-click="_submit">Login</paper-button>
     </form>
+    <iron-ajax
+        id="loginAjax"
+        url="/login/"
+        method="POST"
+        content-type="application/json"
+        handle-as="json"
+        on-response="_handleLogin"
+        debounce-duration="300"></iron-ajax>
+    <paper-toast id="toast"><span>{{err}}</span></paper-toast>
   </template>
   <script>
     Polymer({
-      is: 'login-form'
+      is: 'login-form',
+
+      _submit: function() {
+        var loginInfo = {
+
+        }
+        this.$.loginAjax.body = {
+          username: this.$.username.value,
+          password: this.$.password.value
+        }
+        this.$.loginAjax.generateRequest();
+      },
+
+      _handleLogin: function(event, data, x) {
+        if(data.response.hash !== undefined) {
+          var sessionCookie = "session=" + data.response.hash + ";";
+          document.location.href = "/app/"
+        } else {
+          console.log(data.response);
+          this.err = data.response.err;
+          this.$.toast.show();
+        }
+      }
     });
   </script>
 </dom-module>
