--- a/software/src/omaha/templates/components/speaker-icon.html
+++ b/software/src/omaha/templates/components/speaker-icon.html
@@ -23,7 +23,11 @@
         height: 30px; 
         position: absolute;
         cursor: pointer;
-
+        --iron-icon-fill-color: white;
+        -moz-border-radius: 15px;
+        -webkit-border-radius: 15px;
+        border-radius: 15px;
+        background: var(--speaker-background-color);
       }
 
     </style>
@@ -32,11 +36,11 @@
   </template>
   <script>
     var colors = [
-      /*'--paper-brown-500',
+      '--paper-brown-500',
       '--paper-deep-orange-500',
       '--paper-orange-500',
-      '--paper-amber-500',*/
-      /*'--paper-yellow-500',
+      '--paper-amber-500',
+      //'--paper-yellow-500', this is kinda hard to see
       '--paper-lime-500',
       '--paper-light-green-500',
       '--paper-green-500',
@@ -47,7 +51,7 @@
       '--paper-indigo-500',
       '--paper-deep-purple-500',
       '--paper-purple-500',
-      '--paper-pink-500',*/
+      '--paper-pink-500',
       '--paper-red-500'
     ];
 
@@ -64,8 +68,8 @@
           this.$.icon.style.left = this.x.toString() + "px";
           this.$.icon.style.top = this.y.toString() + "px";
           var color = colors[Math.floor(Math.random()*colors.length)];
-          this.$.icon.customStyle['--iron-icon-fill-color'] = 'var(' + color + ')';
-          this.$.icon.updateStyles();
+          this.customStyle['--speaker-background-color'] = 'var(' + color + ')';
+          this.updateStyles();
       }
     });
   </script>
