--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -105,7 +105,7 @@
       is: 'audio-controller',
 
       behaviors: [
-        Polymer.NeonSharedElementAnimatableBehavior
+        Polymer.NeonAnimatableBehavior
       ],
 
       properties: {
@@ -143,29 +143,13 @@
           observer: '_volumeUpdate'
         },
 
-        sharedElements: {
-          type: Object,
-          value: function() {
-            return {
-              'hero': this.$.pages,
-            }
-          }
-        },
-
         animationConfig: {
           value: function() {
             return {
-              'entry': [{
-                  name: 'hero-animation',
-                  id: 'hero',
-                  toPage: this,
-                  timing: {
-                    delay: 150
-                  }
-                },{
+              'entry': {
                   name: 'fade-in-animation',
                   node: this
-                }],
+                },
               'exit': {
                 // provided by neon-animation-animations/fade-out-animation.html
                 name: 'slide-left-animation',
