--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -54,7 +54,7 @@
         }
       },
 
-      attached: function() {
+      renderMap: function() {
         var mapController = this;
         // Map views always need a projection.  Here we just want to map image
         // coordinates directly to map coordinates, so we create a projection that uses
@@ -66,598 +66,7 @@
           extent: extent
         });
 
-        var locations = [
-          {
-x: 576,
-y: 908,
- id: 1
-},
-{
-x: 485,
-y: 1088,
- id: 2
-},
-{
-x: 394,
-y: 1093,
- id: 3
-},
-{
-x: 1220,
-y: 999,
- id: 4
-},
-{
-x: 575,
-y: 1377,
- id: 5
-},
-{
-x: 1220,
-y: 910,
- id: 6
-},
-{
-x: 1036,
-y: 908,
- id: 7
-},
-{
-x: 1217,
-y: 1285,
- id: 8
-},
-{
-x: 1401,
-y: 1285,
- id: 9
-},
-{
-x: 1769,
-y: 1285,
- id: 10
-},
-{
-x: 944,
-y: 1000,
- id: 11
-},
-{
-x: 1036,
-y: 1000,
- id: 12
-},
-{
-x: 668,
-y: 1465,
- id: 13
-},
-{
-x: 668,
-y: 908,
- id: 14
-},
-{
-x: 664,
-y: 1284,
- id: 15
-},
-{
-x: 668,
-y: 1000,
- id: 16
-},
-{
-x: 760,
-y: 1000,
- id: 17
-},
-{
-x: 852,
-y: 1376,
- id: 18
-},
-{
-x: 1587,
-y: 1000,
- id: 19
-},
-{
-x: 1955,
-y: 1000,
- id: 20
-},
-{
-x: 1679,
-y: 1000,
- id: 21
-},
-{
-x: 1679,
-y: 908,
- id: 22
-},
-{
-x: 571,
-y: 1184,
- id: 23
-},
-{
-x: 760,
-y: 1287,
- id: 24
-},
-{
-x: 1128,
-y: 1000,
- id: 25
-},
-{
-x: 1309,
-y: 1285,
- id: 26
-},
-{
-x: 1486,
-y: 1092,
- id: 27
-},
-{
-x: 1493,
-y: 1285,
- id: 28
-},
-{
-x: 1679,
-y: 1376,
- id: 29
-},
-{
-x: 1264,
-y: 376,
- id: 30
-},
-{
-x: 1495,
-y: 1000,
- id: 31
-},
-{
-x: 946,
-y: 1466,
- id: 32
-},
-{
-x: 1145,
-y: 201,
- id: 33
-},
-{
-x: 393,
-y: 1000,
- id: 34
-},
-{
-x: 485,
-y: 908,
- id: 35
-},
-{
-x: 1771,
-y: 1465,
- id: 36
-},
-{
-x: 576,
-y: 1000,
- id: 37
-},
-{
-x: 1587,
-y: 1465,
- id: 38
-},
-{
-x: 1679,
-y: 1465,
- id: 39
-},
-{
-x: 484,
-y: 1180,
- id: 40
-},
-{
-x: 1404,
-y: 1463,
- id: 41
-},
-{
-x: 1486,
-y: 1183,
- id: 42
-},
-{
-x: 1495,
-y: 1465,
- id: 43
-},
-{
-x: 1127,
-y: 1376,
- id: 44
-},
-{
-x: 1311,
-y: 1376,
- id: 45
-},
-{
-x: 1401,
-y: 1376,
- id: 46
-},
-{
-x: 392,
-y: 1374,
- id: 47
-},
-{
-x: 1770,
-y: 1377,
- id: 48
-},
-{
-x: 1864,
-y: 1466,
- id: 49
-},
-{
-x: 1862,
-y: 908,
- id: 50
-},
-{
-x: 929,
-y: 1092,
- id: 51
-},
-{
-x: 388,
-y: 1466,
- id: 52
-},
-{
-x: 1823,
-y: 1183,
- id: 53
-},
-{
-x: 758,
-y: 1376,
- id: 54
-},
-{
-x: 486,
-y: 1283,
- id: 55
-},
-{
-x: 667,
-y: 1377,
- id: 56
-},
-{
-x: 482,
-y: 1376,
- id: 57
-},
-{
-x: 1219,
-y: 1377,
- id: 58
-},
-{
-x: 1678,
-y: 1284,
- id: 59
-},
-{
-x: 1954,
-y: 1282,
- id: 60
-},
-{
-x: 1954,
-y: 1466,
- id: 61
-},
-{
-x: 216,
-y: 1373,
- id: 62
-},
-{
-x: 573,
-y: 1465,
- id: 63
-},
-{
-x: 759,
-y: 1465,
- id: 64
-},
-{
-x: 1587,
-y: 1375,
- id: 65
-},
-{
-x: 1863,
-y: 1281,
- id: 66
-},
-{
-x: 1304,
-y: 292,
- id: 67
-},
-{
-x: 1127,
-y: 1465,
- id: 68
-},
-{
-x: 301,
-y: 1183,
- id: 69
-},
-{
-x: 1493,
-y: 1376,
- id: 70
-},
-{
-x: 943,
-y: 1376,
- id: 71
-},
-{
-x: 301,
-y: 1281,
- id: 72
-},
-{
-x: 485,
-y: 1001,
- id: 73
-},
-{
-x: 942,
-y: 1288,
- id: 74
-},
-{
-x: 1219,
-y: 1465,
- id: 75
-},
-{
-x: 1585,
-y: 1284,
- id: 76
-},
-{
-x: 1864,
-y: 1377,
- id: 77
-},
-{
-x: 576,
-y: 1284,
- id: 78
-},
-{
-x: 1209,
-y: 459,
- id: 79
-},
-{
-x: 1911,
-y: 1092,
- id: 80
-},
-{
-x: 1312,
-y: 985,
- id: 81
-},
-{
-x: 571,
-y: 1094,
- id: 82
-},
-{
-x: 852,
-y: 1467,
- id: 83
-},
-{
-x: 1036,
-y: 1379,
- id: 84
-},
-{
-x: 1404,
-y: 1002,
- id: 85
-},
-{
-x: 1863,
-y: 998,
- id: 86
-},
-{
-x: 1036,
-y: 1465,
- id: 87
-},
-{
-x: 1823,
-y: 1091,
- id: 88
-},
-{
-x: 1184,
-y: 329,
- id: 89
-},
-{
-x: 398,
-y: 1280,
- id: 90
-},
-{
-x: 300,
-y: 1370,
- id: 91
-},
-{
-x: 859,
-y: 1288,
- id: 92
-},
-{
-x: 1954,
-y: 909,
- id: 93
-},
-{
-x: 1953,
-y: 1376,
- id: 94
-},
-{
-x: 1769,
-y: 1000,
- id: 95
-},
-{
-x: 928,
-y: 1181,
- id: 96
-},
-{
-x: 292,
-y: 1465,
- id: 97
-},
-{
-x: 854,
-y: 1000,
- id: 98
-},
-{
-x: 1401,
-y: 908,
- id: 99
-},
-{
-x: 1771,
-y: 910,
- id: 100
-},
-{
-x: 478,
-y: 1467,
- id: 101
-},
-{
-x: 1496,
-y: 909,
- id: 102
-},
-{
-x: 1588,
-y: 907,
- id: 103
-},
-{
-x: 1311,
-y: 1464,
- id: 104
-},
-{
-x: 1105,
-y: 286,
- id: 105
-},
-{
-x: 395,
-y: 1184,
- id: 106
-},
-{
-x: 1136,
-y: 413,
- id: 107
-},
-{
-x: 761,
-y: 908,
- id: 108
-},
-{
-x: 1297,
-y: 460,
- id: 109
-},
-{
-x: 1065,
-y: 367,
- id: 110
-},
-{
-x: 1225,
-y: 246,
- id: 111
-},
-{
-x: 1117,
-y: 908,
- id: 112
-},
-{
-x: 1912,
-y: 1184,
- id: 113
-},
-{
-x: 1335,
-y: 907,
- id: 114
-},
-{
-x: 1022,
-y: 1288,
- id: 115
-},
-{
-x: 851,
-y: 908,
- id: 116
-},
-{
-x: 1119,
-y: 1287,
- id: 117
-},
-{
-x: 943,
-y: 909,
- id: 118
-}
-];
+        var locations = this.controllers;
         var features = new Array(locations.length);
         for(var i = 0; i < features.length; i++) {
             var coordinates = [locations[i].x, 1700-locations[i].y];
