Left some comments for later

--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -34,7 +34,7 @@
 
     </style>
     <paper-drawer-panel id="panel">
-      <div drawer> Drawer panel... </div>
+      <div drawer class="title">Project Omaha</div>
       <paper-header-panel class="flex" mode="seamed" main>
         <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
         <neon-animated-pages class="fit" id="app-pages" selected="{{selected}}">
