--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -55,6 +55,21 @@
       },
 
       _createAccountPressed: function() {
+
+        // We need to check whether or not they are logged in, if they are go to user/admin panel
+
+        /*
+
+            If you are already logged in then it will show you information about your account: reset password, change username, security information like your security questions, associated email, change theme option
+
+            Do tool tip stuff for speakers to show status
+
+            
+
+
+
+        */
+
         this.fire('showaccountcreation', {})
         this.showBackArrow();
       },
